[gd_scene load_steps=22 format=3 uid="uid://dch38mlri3jq5"]

[ext_resource type="Script" uid="uid://c7qvqnaqy8jxr" path="res://Scripts/player.gd" id="1_cvnsp"]
[ext_resource type="Texture2D" uid="uid://dni6qpiwmo23m" path="res://Sprites/Player/Player Character.png" id="2_6t5aa"]
[ext_resource type="Script" uid="uid://d21rgxc5hqn8y" path="res://Scripts/score.gd" id="4_fkybt"]
[ext_resource type="Script" uid="uid://dd7j8ghakp0b1" path="res://Scripts/time.gd" id="4_vgqql"]
[ext_resource type="Texture2D" uid="uid://opx2xg8oo7fn" path="res://Sprites/weapons/sword/sword1.png" id="5_x3wgy"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f1ek2"]
radius = 8.0
height = 22.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fkybt"]
radius = 9.0
height = 33.0

[sub_resource type="AtlasTexture" id="AtlasTexture_vgqql"]
atlas = ExtResource("2_6t5aa")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkybt"]
atlas = ExtResource("2_6t5aa")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3wgy"]
atlas = ExtResource("2_6t5aa")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3smsa"]
atlas = ExtResource("2_6t5aa")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_8erm5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgqql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkybt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3wgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3smsa")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_fkybt"]
radius = 72.0

[sub_resource type="LabelSettings" id="LabelSettings_fkybt"]
font_size = 40
font_color = Color(0.921154, 0.920709, 0, 1)
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_vgqql"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordUp:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordUp:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -23)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SwordUp/Area2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SwordUp:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SwordDown:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.14159]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SwordDown:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 23)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("SwordDown:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("SwordDown/Area2D/CollisionShape2D:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("SwordLeft:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.5708]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("SwordLeft:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-23, 0)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("SwordLeft/Area2D/CollisionShape2D:disabled")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("SwordLeft:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("SwordRight:rotation")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("SwordRight:position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(23, 0)]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("SwordRight:visible")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("SwordRight/Area2D/CollisionShape2D:disabled")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_fkybt"]
resource_name = "sword_down_animation"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordDown:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0766667, 0.166667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [3.14159, 4.08931, 2.86059, 3.14159]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordDown:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0766784, 0.166667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 23), Vector2(-5.08, 23), Vector2(7.09, 23), Vector2(0, 23)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SwordDown:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SwordDown/Area2D/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_x3wgy"]
resource_name = "sword_left_animation"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordLeft:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0767, 0.166667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-1.5708, -0.623083, -1.85179, -1.5708]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordLeft:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0767, 0.166667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-23, 0), Vector2(-23, -7.09), Vector2(-23, 5.08), Vector2(-23, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SwordLeft/Area2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SwordLeft:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_3smsa"]
resource_name = "sword_right_animation"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordRight:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0767, 0.166667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [1.5708, 2.51851, 1.2898, 1.5708]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordRight:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0767, 0.166667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(23, 0), Vector2(23, 7.09), Vector2(23, -5.08), Vector2(23, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SwordRight:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SwordRight/Area2D/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_6t5aa"]
resource_name = "sword_up_animation"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordUp:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0766667, 0.166667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.947714, -0.280998, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordUp:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0766667, 0.166667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -23), Vector2(7.09, -23), Vector2(-5.08, -23), Vector2(0, -23)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SwordUp/Area2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SwordUp:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vgqql"]
_data = {
&"RESET": SubResource("Animation_vgqql"),
&"sword_down_animation": SubResource("Animation_fkybt"),
&"sword_left_animation": SubResource("Animation_x3wgy"),
&"sword_right_animation": SubResource("Animation_3smsa"),
&"sword_up_animation": SubResource("Animation_6t5aa")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vgqql"]
radius = 9.0
height = 34.0

[node name="PlayerCharacterBody2D" type="CharacterBody2D" node_paths=PackedStringArray("_weapon_animation_player")]
script = ExtResource("1_cvnsp")
_weapon_animation_player = NodePath("Weapon/AnimationPlayerWeapon")

[node name="PlayerCollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_f1ek2")

[node name="EnemyCheckArea2D" type="Area2D" parent="."]
collision_mask = 2

[node name="EnemyCollisionShape2D" type="CollisionShape2D" parent="EnemyCheckArea2D"]
shape = SubResource("CapsuleShape2D_fkybt")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_8erm5")
animation = &"Run"
frame_progress = 0.178572

[node name="AreaForEnemyFollow" type="Area2D" parent="."]
collision_mask = 2

[node name="EnemyFollowCollisionShape" type="CollisionShape2D" parent="AreaForEnemyFollow"]
shape = SubResource("CircleShape2D_fkybt")
debug_color = Color(0, 0.643137, 0.27451, 0.109804)

[node name="AreaDisabledTimer" type="Timer" parent="AreaForEnemyFollow"]
wait_time = 0.3
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.75, 1.75)
position_smoothing_enabled = true

[node name="Ui" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -328.0
offset_top = -184.0
offset_right = 328.0
offset_bottom = 184.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Score" type="Label" parent="Ui"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.046
offset_left = -38.0
offset_top = 28.0
offset_right = 40.0
offset_bottom = 28.092
grow_horizontal = 2
text = "Score: 0"
script = ExtResource("4_fkybt")

[node name="Time" type="Label" parent="Ui"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.102
offset_left = -183.0
offset_top = 29.0
offset_right = -105.0
offset_bottom = 1.204
grow_horizontal = 2
text = "00:00"
script = ExtResource("4_vgqql")

[node name="GameTime" type="Timer" parent="Ui/Time"]
wait_time = 120.0

[node name="GameOver" type="Label" parent="Ui"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.046
offset_left = -48.0
offset_top = 154.0
offset_right = 44.0
offset_bottom = 154.092
grow_horizontal = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_fkybt")

[node name="Weapon" type="Node2D" parent="."]

[node name="AnimationPlayerWeapon" type="AnimationPlayer" parent="Weapon"]
libraries = {
&"": SubResource("AnimationLibrary_vgqql")
}

[node name="SwordUp" type="Sprite2D" parent="Weapon"]
visible = false
position = Vector2(0, -23)
texture = ExtResource("5_x3wgy")

[node name="Area2D" type="Area2D" parent="Weapon/SwordUp"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Weapon/SwordUp/Area2D"]
shape = SubResource("CapsuleShape2D_vgqql")
disabled = true

[node name="SwordDown" type="Sprite2D" parent="Weapon"]
visible = false
position = Vector2(0, 23)
rotation = 3.14159
texture = ExtResource("5_x3wgy")

[node name="Area2D" type="Area2D" parent="Weapon/SwordDown"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Weapon/SwordDown/Area2D"]
shape = SubResource("CapsuleShape2D_vgqql")
disabled = true

[node name="SwordLeft" type="Sprite2D" parent="Weapon"]
visible = false
position = Vector2(-23, 0)
rotation = -1.5708
texture = ExtResource("5_x3wgy")

[node name="Area2D" type="Area2D" parent="Weapon/SwordLeft"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Weapon/SwordLeft/Area2D"]
shape = SubResource("CapsuleShape2D_vgqql")
disabled = true

[node name="SwordRight" type="Sprite2D" parent="Weapon"]
visible = false
position = Vector2(23, 0)
rotation = 1.5708
texture = ExtResource("5_x3wgy")

[node name="Area2D" type="Area2D" parent="Weapon/SwordRight"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Weapon/SwordRight/Area2D"]
shape = SubResource("CapsuleShape2D_vgqql")
disabled = true

[connection signal="body_entered" from="EnemyCheckArea2D" to="." method="_on_enemy_check_area_2d_body_entered"]
[connection signal="body_exited" from="EnemyCheckArea2D" to="." method="_on_enemy_check_area_2d_body_exited"]
[connection signal="body_entered" from="AreaForEnemyFollow" to="." method="_on_area_for_enemy_follow_body_entered"]
[connection signal="body_exited" from="AreaForEnemyFollow" to="." method="_on_area_for_enemy_follow_body_exited"]
[connection signal="timeout" from="AreaForEnemyFollow/AreaDisabledTimer" to="." method="_on_area_disabled_timer_timeout"]
[connection signal="timeout" from="Ui/Time/GameTime" to="." method="_on_game_time_timeout"]
[connection signal="body_entered" from="Weapon/SwordUp/Area2D" to="." method="_on_sword_up_area_2d_body_entered"]
[connection signal="body_entered" from="Weapon/SwordDown/Area2D" to="." method="_on_sword_down_area_2d_body_entered"]
[connection signal="body_entered" from="Weapon/SwordLeft/Area2D" to="." method="_on_sword_left_area_2d_body_entered"]
[connection signal="body_entered" from="Weapon/SwordRight/Area2D" to="." method="_on_sword_right_area_2d_body_entered"]
